--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.shapefill.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.shapefill.yml
@@ -1,265 +1,231 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ShapeFill:class'
-    summary: |-
-      代表 shape 对象的填充格式。
+### YamlMime:TSType
+name: Excel.ShapeFill
+uid: excel!Excel.ShapeFill:class
+package: excel!
+fullName: Excel.ShapeFill
+summary: >-
+  代表 shape 对象的填充格式。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ShapeFill
-    fullName: Excel.ShapeFill
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.ShapeFill#clear:member(1)'
-      - 'excel!Excel.ShapeFill#context:member'
-      - 'excel!Excel.ShapeFill#foregroundColor:member'
-      - 'excel!Excel.ShapeFill#load:member(1)'
-      - 'excel!Excel.ShapeFill#load:member(2)'
-      - 'excel!Excel.ShapeFill#load:member(3)'
-      - 'excel!Excel.ShapeFill#set:member(1)'
-      - 'excel!Excel.ShapeFill#set:member(2)'
-      - 'excel!Excel.ShapeFill#setSolidColor:member(1)'
-      - 'excel!Excel.ShapeFill#toJSON:member(1)'
-      - 'excel!Excel.ShapeFill#transparency:member'
-      - 'excel!Excel.ShapeFill#type:member'
-  - uid: 'excel!Excel.ShapeFill#clear:member(1)'
-    summary: |-
-      清除此形状的填充格式。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: clear()
-    fullName: clear()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'clear(): void;'
-      return:
-        type:
-          - void
-        description: ''
-  - uid: 'excel!Excel.ShapeFill#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ShapeFill#foregroundColor:member'
-    summary: |-
-      代表形状填充前景色的格式为 \# RRGGBB （例如，"FFA500"）或命名的 html 颜色（例如，"橙色"）的 html 颜色格式（如 ""）或命名的 html 颜色（例如 "橙色"）
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.ShapeFill#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: foregroundColor
+  uid: excel!Excel.ShapeFill#foregroundColor:member
+  package: excel!
+  fullName: foregroundColor
+  summary: "代表形状填充前景色的格式为 \\# RRGGBB (例如，\"FFA500\" ) 或用作命名的 HTML 颜色 (例如 \"橙色\" ) \n\n\\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\\]"
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'foregroundColor: string;'
+    return:
+      type: string
+- name: transparency
+  uid: excel!Excel.ShapeFill#transparency:member
+  package: excel!
+  fullName: transparency
+  summary: >-
+    将 fill 的透明度百分比指定为 0.0 (不透明) 到 1.0 (clear) 中的值。 如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: foregroundColor
-    fullName: foregroundColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'foregroundColor: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.ShapeFill#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.ShapeFillLoadOptions): Excel.ShapeFill;'
-      return:
-        type:
-          - 'excel!Excel.ShapeFill:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.ShapeFillLoadOptions:interface'
-  - uid: 'excel!Excel.ShapeFill#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ShapeFill;'
-      return:
-        type:
-          - 'excel!Excel.ShapeFill:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.ShapeFill#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'transparency: number;'
+    return:
+      type: number
+- name: type
+  uid: excel!Excel.ShapeFill#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    返回形状的填充类型。 有关详细信息，请参阅 Excel.ShapeFillType。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly type: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
+    return:
+      type: <xref uid="excel!Excel.ShapeFillType:enum" /> | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
+methods:
+- name: clear()
+  uid: excel!Excel.ShapeFill#clear:member(1)
+  package: excel!
+  fullName: clear()
+  summary: >-
+    清除此形状的填充格式。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'clear(): void;'
+    return:
+      type: void
+      description: ''
+- name: load(options)
+  uid: excel!Excel.ShapeFill#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.ShapeFillLoadOptions): Excel.ShapeFill;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.ShapeFillLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.ShapeFill:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.ShapeFill#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.ShapeFill;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.ShapeFill:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.ShapeFill#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.ShapeFill;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.ShapeFill;
-      return:
-        type:
-          - 'excel!Excel.ShapeFill:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.ShapeFill#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
+                }
+    return:
+      type: <xref uid="excel!Excel.ShapeFill:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.ShapeFill#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      `set(properties: Excel.ShapeFill): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ShapeFillUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.ShapeFillUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ShapeFill#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.ShapeFill): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.ShapeFill:class'
-  - uid: 'excel!Excel.ShapeFill#setSolidColor:member(1)'
-    summary: |-
-      将形状的填充格式设置为统一颜色。 这样可将填充类型更改为“Solid”。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: setSolidColor(color)
-    fullName: setSolidColor(color)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'setSolidColor(color: string): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: color
-          description: 一个字符串，表示以 HTML 颜色格式表示的填充颜色，格式 \# RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
-          type:
-            - string
-  - uid: 'excel!Excel.ShapeFill#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 ShapeFill 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeFillData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.ShapeFillData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ShapeFillData:interface'
-        description: ''
-  - uid: 'excel!Excel.ShapeFill#transparency:member'
-    summary: |-
-      将填充的透明度百分比指定为0.0 （不透明）到1.0 （清除）中的值。 如果形状类型不支持透明度或形状填充透明度不一致（例如使用渐变填充类型），则返回 null。
+    `set(properties: Excel.ShapeFill): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ShapeFillUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.ShapeFillUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.ShapeFill#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.ShapeFill): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.ShapeFill:class" />
+    return:
+      type: void
+      description: ''
+- name: setSolidColor(color)
+  uid: excel!Excel.ShapeFill#setSolidColor:member(1)
+  package: excel!
+  fullName: setSolidColor(color)
+  summary: >-
+    将形状的填充格式设置为统一颜色。 这样可将填充类型更改为“Solid”。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: transparency
-    fullName: transparency
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'transparency: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.ShapeFill#type:member'
-    summary: |-
-      返回形状的填充类型。 有关详细信息，请参阅 Excel.ShapeFillType。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly type: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed";'
-      return:
-        type:
-          - 'excel!Excel.ShapeFill#type~0:complex'
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.ShapeFill:class'
-    name: Excel.ShapeFill
-  - uid: 'excel!Excel.Interfaces.ShapeFillLoadOptions:interface'
-    name: Excel.Interfaces.ShapeFillLoadOptions
-  - uid: 'excel!Excel.Interfaces.ShapeFillUpdateData:interface'
-    name: Interfaces.ShapeFillUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.Interfaces.ShapeFillData:interface'
-    name: Excel.Interfaces.ShapeFillData
-  - uid: 'excel!Excel.ShapeFill#type~0:complex'
-    name: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
-    fullName: Excel.ShapeFillType | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"
-    spec.typeScript:
-      - uid: 'excel!Excel.ShapeFillType:enum'
-        name: Excel.ShapeFillType
-        fullName: Excel.ShapeFillType
-      - name: ' | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"'
-        fullName: ' | "NoFill" | "Solid" | "Gradient" | "Pattern" | "PictureAndTexture" | "Mixed"'
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'setSolidColor(color: string): void;'
+    parameters:
+    - id: color
+      description: 一个字符串，表示以 HTML 颜色格式表示的填充颜色，格式 \# RRGGBB (例如，"FFA500" ) 或作为命名的 HTML 颜色 (例如，"橙色" ) 。
+      type: string
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.ShapeFill#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 ShapeFill 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.ShapeFillData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.ShapeFillData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ShapeFillData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 964b824663727759536f2d96256be619a50586ea
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49163558"
