--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.shapefont.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.shapefont.yml
@@ -1,274 +1,241 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ShapeFont:class'
-    summary: |-
-      代表形状的 TextRange 对象的字体属性，如字体名称、字体大小和颜色。
+### YamlMime:TSType
+name: Excel.ShapeFont
+uid: excel!Excel.ShapeFont:class
+package: excel!
+fullName: Excel.ShapeFont
+summary: >-
+  代表形状的 TextRange 对象的字体属性，如字体名称、字体大小和颜色。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ShapeFont
-    fullName: Excel.ShapeFont
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.ShapeFont#bold:member'
-      - 'excel!Excel.ShapeFont#color:member'
-      - 'excel!Excel.ShapeFont#context:member'
-      - 'excel!Excel.ShapeFont#italic:member'
-      - 'excel!Excel.ShapeFont#load:member(1)'
-      - 'excel!Excel.ShapeFont#load:member(2)'
-      - 'excel!Excel.ShapeFont#load:member(3)'
-      - 'excel!Excel.ShapeFont#name:member'
-      - 'excel!Excel.ShapeFont#set:member(1)'
-      - 'excel!Excel.ShapeFont#set:member(2)'
-      - 'excel!Excel.ShapeFont#size:member'
-      - 'excel!Excel.ShapeFont#toJSON:member(1)'
-      - 'excel!Excel.ShapeFont#underline:member'
-  - uid: 'excel!Excel.ShapeFont#bold:member'
-    summary: |-
-      表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: bold
-    fullName: bold
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'bold: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.ShapeFont#color:member'
-    summary: |-
-      文本颜色的 HTML 颜色代码表示形式（例如，" \# FF0000" 代表红色）。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: bold
+  uid: excel!Excel.ShapeFont#bold:member
+  package: excel!
+  fullName: bold
+  summary: >-
+    表示字体的加粗状态。 如果 TextRange 包含粗体和非粗体文本片段，则返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.ShapeFont#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.ShapeFont#italic:member'
-    summary: |-
-      表示字体的斜体状态。 如果 TextRange 包含斜体和非斜体文本片段，则返回 null。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: italic
-    fullName: italic
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'italic: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.ShapeFont#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.ShapeFontLoadOptions): Excel.ShapeFont;'
-      return:
-        type:
-          - 'excel!Excel.ShapeFont:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.ShapeFontLoadOptions:interface'
-  - uid: 'excel!Excel.ShapeFont#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.ShapeFont;'
-      return:
-        type:
-          - 'excel!Excel.ShapeFont:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.ShapeFont#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'bold: boolean;'
+    return:
+      type: boolean
+- name: color
+  uid: excel!Excel.ShapeFont#color:member
+  package: excel!
+  fullName: color
+  summary: " (文本颜色的 HTML 颜色代码表示形式，例如，\" \\# FF0000\" 表示红色) 。 如果 TextRange 包含具有不同颜色的文本片段，则返回 null。\n\n\\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\\]"
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color: string;'
+    return:
+      type: string
+- name: context
+  uid: excel!Excel.ShapeFont#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: italic
+  uid: excel!Excel.ShapeFont#italic:member
+  package: excel!
+  fullName: italic
+  summary: >-
+    表示字体的斜体状态。 如果 TextRange 包含斜体和非斜体文本片段，则返回 null。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'italic: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.ShapeFont#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    表示字体名称 (例如，"Calibri" ) 。 如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name: string;'
+    return:
+      type: string
+- name: size
+  uid: excel!Excel.ShapeFont#size:member
+  package: excel!
+  fullName: size
+  summary: >-
+    表示字体大小，以磅为单位 (例如，11) 。 如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'size: number;'
+    return:
+      type: number
+- name: underline
+  uid: excel!Excel.ShapeFont#underline:member
+  package: excel!
+  fullName: underline
+  summary: >-
+    应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
+
+
+    \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'underline: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble";'
+    return:
+      type: <xref uid="excel!Excel.ShapeFontUnderlineStyle:enum" /> | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
+methods:
+- name: load(options)
+  uid: excel!Excel.ShapeFont#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.ShapeFontLoadOptions): Excel.ShapeFont;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.ShapeFontLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.ShapeFont:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.ShapeFont#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.ShapeFont;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.ShapeFont:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.ShapeFont#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.ShapeFont;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.ShapeFont;
-      return:
-        type:
-          - 'excel!Excel.ShapeFont:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.ShapeFont#name:member'
-    summary: |-
-      表示字体名称（例如，"Calibri"）。 如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。
+                }
+    return:
+      type: <xref uid="excel!Excel.ShapeFont:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.ShapeFont#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.ShapeFont#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
 
-      `set(properties: Excel.ShapeFont): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.ShapeFontUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.ShapeFontUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.ShapeFont#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.ShapeFont): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.ShapeFont:class'
-  - uid: 'excel!Excel.ShapeFont#size:member'
-    summary: |-
-      表示以磅为单位的字体大小（例如，11）。 如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。
-
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: size
-    fullName: size
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'size: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.ShapeFont#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 ShapeFont 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ShapeFontData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.ShapeFontData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ShapeFontData:interface'
-        description: ''
-  - uid: 'excel!Excel.ShapeFont#underline:member'
-    summary: |-
-      应用于字体的下划线类型。 如果 TextRange 包含具有不同下划线样式的文本片段，则返回 null。 有关详细信息，请参阅 Excel.ShapeFontUnderlineStyle。
-
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: underline
-    fullName: underline
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'underline: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble";'
-      return:
-        type:
-          - 'excel!Excel.ShapeFont#underline~0:complex'
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.ShapeFont:class'
-    name: Excel.ShapeFont
-  - uid: 'excel!Excel.Interfaces.ShapeFontLoadOptions:interface'
-    name: Excel.Interfaces.ShapeFontLoadOptions
-  - uid: 'excel!Excel.Interfaces.ShapeFontUpdateData:interface'
-    name: Interfaces.ShapeFontUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.Interfaces.ShapeFontData:interface'
-    name: Excel.Interfaces.ShapeFontData
-  - uid: 'excel!Excel.ShapeFont#underline~0:complex'
-    name: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
-    fullName: Excel.ShapeFontUnderlineStyle | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"
-    spec.typeScript:
-      - uid: 'excel!Excel.ShapeFontUnderlineStyle:enum'
-        name: Excel.ShapeFontUnderlineStyle
-        fullName: Excel.ShapeFontUnderlineStyle
-      - name: ' | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"'
-        fullName: ' | "None" | "Single" | "Double" | "Heavy" | "Dotted" | "DottedHeavy" | "Dash" | "DashHeavy" | "DashLong" | "DashLongHeavy" | "DotDash" | "DotDashHeavy" | "DotDotDash" | "DotDotDashHeavy" | "Wavy" | "WavyHeavy" | "WavyDouble"'
+    `set(properties: Excel.ShapeFont): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.ShapeFontUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.ShapeFontUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.ShapeFont#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.ShapeFont): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.ShapeFont:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.ShapeFont#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 ShapeFont 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.ShapeFontData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.ShapeFontData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ShapeFontData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: 0863116f80abf22b6cf4ac0594be110188fc0b53
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49163544"
