--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.shapescalefrom.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.shapescalefrom.yml
@@ -1,38 +1,33 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ShapeScaleFrom:enum'
-    summary: |-
-      指定在缩放形状时，该形状的哪一部分将保持在原有的位置。
+### YamlMime:TSEnum
+name: Excel.ShapeScaleFrom
+uid: excel!Excel.ShapeScaleFrom:enum
+package: excel!
+fullName: Excel.ShapeScaleFrom
+summary: >-
+  指定在缩放形状时，该形状的哪一部分将保持在原有的位置。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ShapeScaleFrom
-    fullName: Excel.ShapeScaleFrom
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ShapeScaleFrom.scaleFromBottomRight:member'
-      - 'excel!Excel.ShapeScaleFrom.scaleFromMiddle:member'
-      - 'excel!Excel.ShapeScaleFrom.scaleFromTopLeft:member'
-  - uid: 'excel!Excel.ShapeScaleFrom.scaleFromBottomRight:member'
-    name: scaleFromBottomRight
-    fullName: scaleFromBottomRight
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ScaleFromBottomRight"'
-  - uid: 'excel!Excel.ShapeScaleFrom.scaleFromMiddle:member'
-    name: scaleFromMiddle
-    fullName: scaleFromMiddle
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ScaleFromMiddle"'
-  - uid: 'excel!Excel.ShapeScaleFrom.scaleFromTopLeft:member'
-    name: scaleFromTopLeft
-    fullName: scaleFromTopLeft
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ScaleFromTopLeft"'
+
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: scaleFromBottomRight
+  uid: excel!Excel.ShapeScaleFrom.scaleFromBottomRight:member
+  package: excel!
+  summary: ''
+- name: scaleFromMiddle
+  uid: excel!Excel.ShapeScaleFrom.scaleFromMiddle:member
+  package: excel!
+  summary: ''
+- name: scaleFromTopLeft
+  uid: excel!Excel.ShapeScaleFrom.scaleFromTopLeft:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 5f6dadb685ae4cc0eab5917157e8309411167ef1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49163530"
