--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.shapetexthorizontalalignment.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.shapetexthorizontalalignment.yml
@@ -1,70 +1,49 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment:enum'
-    summary: |-
-      指定形状中的文本框架的水平对齐方式。
+### YamlMime:TSEnum
+name: Excel.ShapeTextHorizontalAlignment
+uid: excel!Excel.ShapeTextHorizontalAlignment:enum
+package: excel!
+fullName: Excel.ShapeTextHorizontalAlignment
+summary: >-
+  指定形状中的文本框架的水平对齐方式。
 
-      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.ShapeTextHorizontalAlignment
-    fullName: Excel.ShapeTextHorizontalAlignment
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ShapeTextHorizontalAlignment.center:member'
-      - 'excel!Excel.ShapeTextHorizontalAlignment.distributed:member'
-      - 'excel!Excel.ShapeTextHorizontalAlignment.justify:member'
-      - 'excel!Excel.ShapeTextHorizontalAlignment.justifyLow:member'
-      - 'excel!Excel.ShapeTextHorizontalAlignment.left:member'
-      - 'excel!Excel.ShapeTextHorizontalAlignment.right:member'
-      - 'excel!Excel.ShapeTextHorizontalAlignment.thaiDistributed:member'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.center:member'
-    name: center
-    fullName: center
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Center"'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.distributed:member'
-    name: distributed
-    fullName: distributed
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Distributed"'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.justify:member'
-    name: justify
-    fullName: justify
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Justify"'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.justifyLow:member'
-    name: justifyLow
-    fullName: justifyLow
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"JustifyLow"'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.left:member'
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Left"'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.right:member'
-    name: right
-    fullName: right
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Right"'
-  - uid: 'excel!Excel.ShapeTextHorizontalAlignment.thaiDistributed:member'
-    name: thaiDistributed
-    fullName: thaiDistributed
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"ThaiDistributed"'
+
+  \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: center
+  uid: excel!Excel.ShapeTextHorizontalAlignment.center:member
+  package: excel!
+  summary: ''
+- name: distributed
+  uid: excel!Excel.ShapeTextHorizontalAlignment.distributed:member
+  package: excel!
+  summary: ''
+- name: justify
+  uid: excel!Excel.ShapeTextHorizontalAlignment.justify:member
+  package: excel!
+  summary: ''
+- name: justifyLow
+  uid: excel!Excel.ShapeTextHorizontalAlignment.justifyLow:member
+  package: excel!
+  summary: ''
+- name: left
+  uid: excel!Excel.ShapeTextHorizontalAlignment.left:member
+  package: excel!
+  summary: ''
+- name: right
+  uid: excel!Excel.ShapeTextHorizontalAlignment.right:member
+  package: excel!
+  summary: ''
+- name: thaiDistributed
+  uid: excel!Excel.ShapeTextHorizontalAlignment.thaiDistributed:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: 525438f1082f35b8b1a29d683128070f3ba4b8fc
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49163516"
