--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.slicerstyle.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.slicerstyle.yml
@@ -1,235 +1,215 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.SlicerStyle:class'
-    summary: |-
-      表示一个切片器样式，该样式按切片器区域定义样式元素。
+### YamlMime:TSType
+name: Excel.SlicerStyle
+uid: excel!Excel.SlicerStyle:class
+package: excel!
+fullName: Excel.SlicerStyle
+summary: >-
+  表示一个切片器样式，该样式按切片器区域定义样式元素。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.SlicerStyle
-    fullName: Excel.SlicerStyle
-    langs:
-      - typeScript
-    type: class
-    extends:
-      - 'office!OfficeExtension.ClientObject:class'
-    package: excel!
-    children:
-      - 'excel!Excel.SlicerStyle#context:member'
-      - 'excel!Excel.SlicerStyle#delete:member(1)'
-      - 'excel!Excel.SlicerStyle#duplicate:member(1)'
-      - 'excel!Excel.SlicerStyle#load:member(1)'
-      - 'excel!Excel.SlicerStyle#load:member(2)'
-      - 'excel!Excel.SlicerStyle#load:member(3)'
-      - 'excel!Excel.SlicerStyle#name:member'
-      - 'excel!Excel.SlicerStyle#readOnly:member'
-      - 'excel!Excel.SlicerStyle#set:member(1)'
-      - 'excel!Excel.SlicerStyle#set:member(2)'
-      - 'excel!Excel.SlicerStyle#toJSON:member(1)'
-  - uid: 'excel!Excel.SlicerStyle#context:member'
-    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
-    name: context
-    fullName: context
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'context: RequestContext;'
-      return:
-        type:
-          - 'excel!Excel.RequestContext:class'
-  - uid: 'excel!Excel.SlicerStyle#delete:member(1)'
-    summary: |-
-      删除 SlicerStyle。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: delete()
-    fullName: delete()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'delete(): void;'
-      return:
-        type:
-          - void
-        description: ''
-  - uid: 'excel!Excel.SlicerStyle#duplicate:member(1)'
-    summary: |-
-      使用所有样式元素的副本创建此 SlicerStyle 的副本。
+  \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: class
+properties:
+- name: context
+  uid: excel!Excel.SlicerStyle#context:member
+  package: excel!
+  fullName: context
+  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'context: RequestContext;'
+    return:
+      type: <xref uid="excel!Excel.RequestContext:class" />
+- name: name
+  uid: excel!Excel.SlicerStyle#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    获取 SlicerStyle 的名称。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: duplicate()
-    fullName: duplicate()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'duplicate(): Excel.SlicerStyle;'
-      return:
-        type:
-          - 'excel!Excel.SlicerStyle:class'
-        description: 与此 SlicerStyle 重复的新 SlicerStyle 对象。
-  - uid: 'excel!Excel.SlicerStyle#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(options)
-    fullName: load(options)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(options?: Excel.Interfaces.SlicerStyleLoadOptions): Excel.SlicerStyle;'
-      return:
-        type:
-          - 'excel!Excel.SlicerStyle:class'
-        description: ''
-      parameters:
-        - id: options
-          description: 提供要加载的对象的属性的选项。
-          type:
-            - 'excel!Excel.Interfaces.SlicerStyleLoadOptions:interface'
-  - uid: 'excel!Excel.SlicerStyle#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNames)
-    fullName: load(propertyNames)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'load(propertyNames?: string | string[]): Excel.SlicerStyle;'
-      return:
-        type:
-          - 'excel!Excel.SlicerStyle:class'
-        description: ''
-      parameters:
-        - id: propertyNames
-          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
-          type:
-            - 'string | string[]'
-  - uid: 'excel!Excel.SlicerStyle#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
-    name: load(propertyNamesAndPaths)
-    fullName: load(propertyNamesAndPaths)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: |-
-        load(propertyNamesAndPaths?: {
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name: string;'
+    return:
+      type: string
+- name: readOnly
+  uid: excel!Excel.SlicerStyle#readOnly:member
+  package: excel!
+  fullName: readOnly
+  summary: >-
+    指定此 SlicerStyle 对象是否为只读。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'readonly readOnly: boolean;'
+    return:
+      type: boolean
+methods:
+- name: delete()
+  uid: excel!Excel.SlicerStyle#delete:member(1)
+  package: excel!
+  fullName: delete()
+  summary: >-
+    删除 SlicerStyle。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'delete(): void;'
+    return:
+      type: void
+      description: ''
+- name: duplicate()
+  uid: excel!Excel.SlicerStyle#duplicate:member(1)
+  package: excel!
+  fullName: duplicate()
+  summary: >-
+    使用所有样式元素的副本创建此 SlicerStyle 的副本。
+
+
+    \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'duplicate(): Excel.SlicerStyle;'
+    return:
+      type: <xref uid="excel!Excel.SlicerStyle:class" />
+      description: 与此 SlicerStyle 重复的新 SlicerStyle 对象。
+- name: load(options)
+  uid: excel!Excel.SlicerStyle#load:member(1)
+  package: excel!
+  fullName: load(options)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(options?: Excel.Interfaces.SlicerStyleLoadOptions): Excel.SlicerStyle;'
+    parameters:
+    - id: options
+      description: 提供要加载的对象的属性的选项。
+      type: <xref uid="excel!Excel.Interfaces.SlicerStyleLoadOptions:interface" />
+    return:
+      type: <xref uid="excel!Excel.SlicerStyle:class" />
+      description: ''
+- name: load(propertyNames)
+  uid: excel!Excel.SlicerStyle#load:member(2)
+  package: excel!
+  fullName: load(propertyNames)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'load(propertyNames?: string | string[]): Excel.SlicerStyle;'
+    parameters:
+    - id: propertyNames
+      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      type: string | string[]
+    return:
+      type: <xref uid="excel!Excel.SlicerStyle:class" />
+      description: ''
+- name: load(propertyNamesAndPaths)
+  uid: excel!Excel.SlicerStyle#load:member(3)
+  package: excel!
+  fullName: load(propertyNamesAndPaths)
+  summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: >-
+      load(propertyNamesAndPaths?: {
+                  select?: string;
+                  expand?: string;
+              }): Excel.SlicerStyle;
+    parameters:
+    - id: propertyNamesAndPaths
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      type: >-
+        {
                     select?: string;
                     expand?: string;
-                }): Excel.SlicerStyle;
-      return:
-        type:
-          - 'excel!Excel.SlicerStyle:class'
-        description: ''
-      parameters:
-        - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
-          type:
-            - |-
-              {
-                          select?: string;
-                          expand?: string;
-                      }
-  - uid: 'excel!Excel.SlicerStyle#name:member'
-    summary: |-
-      获取 SlicerStyle 的名称。
+                }
+    return:
+      type: <xref uid="excel!Excel.SlicerStyle:class" />
+      description: ''
+- name: set(properties, options)
+  uid: excel!Excel.SlicerStyle#set:member(1)
+  package: excel!
+  fullName: set(properties, options)
+  summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
+  remarks: >-
+    此方法具有以下附加签名：
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.SlicerStyle#readOnly:member'
-    summary: |-
-      指定此 SlicerStyle 对象是否为只读。
 
-      \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: readOnly
-    fullName: readOnly
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'readonly readOnly: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.SlicerStyle#set:member(1)'
-    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
-    remarks: |-
-      此方法具有以下附加签名：
-
-      `set(properties: Excel.SlicerStyle): void`
-    name: 'set(properties, options)'
-    fullName: 'set(properties, options)'
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Interfaces.SlicerStyleUpdateData, options?: OfficeExtension.UpdateOptions): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
-          type:
-            - 'excel!Excel.Interfaces.SlicerStyleUpdateData:interface'
-        - id: options
-          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
-          type:
-            - 'office!OfficeExtension.UpdateOptions:interface'
-  - uid: 'excel!Excel.SlicerStyle#set:member(2)'
-    summary: 基于现有加载的对象同时设置该对象的多个属性。
-    name: set(properties)
-    fullName: set(properties)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'set(properties: Excel.SlicerStyle): void;'
-      return:
-        type:
-          - void
-        description: ''
-      parameters:
-        - id: properties
-          description: ''
-          type:
-            - 'excel!Excel.SlicerStyle:class'
-  - uid: 'excel!Excel.SlicerStyle#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 SlicerStyle 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.SlicerStyleData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
-    name: toJSON()
-    fullName: toJSON()
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'toJSON(): Excel.Interfaces.SlicerStyleData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.SlicerStyleData:interface'
-        description: ''
-references:
-  - uid: 'office!OfficeExtension.ClientObject:class'
-    name: OfficeExtension.ClientObject
-  - uid: 'excel!Excel.RequestContext:class'
-    name: RequestContext
-  - uid: 'excel!Excel.SlicerStyle:class'
-    name: Excel.SlicerStyle
-  - uid: 'excel!Excel.Interfaces.SlicerStyleLoadOptions:interface'
-    name: Excel.Interfaces.SlicerStyleLoadOptions
-  - uid: 'excel!Excel.Interfaces.SlicerStyleUpdateData:interface'
-    name: Interfaces.SlicerStyleUpdateData
-  - uid: 'office!OfficeExtension.UpdateOptions:interface'
-    name: OfficeExtension.UpdateOptions
-  - uid: 'excel!Excel.Interfaces.SlicerStyleData:interface'
-    name: Excel.Interfaces.SlicerStyleData
+    `set(properties: Excel.SlicerStyle): void`
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Interfaces.SlicerStyleUpdateData, options?: OfficeExtension.UpdateOptions): void;'
+    parameters:
+    - id: properties
+      description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
+      type: <xref uid="excel!Excel.Interfaces.SlicerStyleUpdateData:interface" />
+    - id: options
+      description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
+      type: <xref uid="office!OfficeExtension.UpdateOptions:interface" />
+    return:
+      type: void
+      description: ''
+- name: set(properties)
+  uid: excel!Excel.SlicerStyle#set:member(2)
+  package: excel!
+  fullName: set(properties)
+  summary: 基于现有加载的对象同时设置该对象的多个属性。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'set(properties: Excel.SlicerStyle): void;'
+    parameters:
+    - id: properties
+      description: ''
+      type: <xref uid="excel!Excel.SlicerStyle:class" />
+    return:
+      type: void
+      description: ''
+- name: toJSON()
+  uid: excel!Excel.SlicerStyle#toJSON:member(1)
+  package: excel!
+  fullName: toJSON()
+  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) ，而原始 SlicerStyle 对象是 API 对象，则该 `toJSON` 方法返回一个 (类型为的纯 JavaScript 对象。 `Excel.Interfaces.SlicerStyleData`<!-- -->) ，其中包含原始对象中任何已加载的子属性的浅表副本。
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'toJSON(): Excel.Interfaces.SlicerStyleData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.SlicerStyleData:interface" />
+      description: ''
+extends: <xref uid="office!OfficeExtension.ClientObject:class" />
+metadata:
+  ms.openlocfilehash: c9e4220ed107f25eefe02ddcc5ceb0c46d0609f6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49163397"
